--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -1,8 +1,18 @@
 {
     "packageDirectories": [{
-        "path": "es-base-objects",
-        "default": true
-    }],
+            "path": "es-base-objects",
+            "default": false
+        },
+        {
+            "path": "es-base-styles",
+            "default": false
+        },
+        {
+            "path": "es-space-mgmt",
+            "default": true
+
+        }
+    ],
     "name": "myeslwc",
     "namespace": "",
     "sfdcLoginUrl": "https://login.salesforce.com",
